--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#455a64</color>
+    <color name="colorPrimary">#546E7A</color>
     <color name="colorPrimaryDark">#1c313a</color>
     <color name="colorAccent">#718792</color>
     <color name="primaryTextColor">#ffffff</color>
