--- a/app/src/main/res/layout/current_weather_fragment.xml
+++ b/app/src/main/res/layout/current_weather_fragment.xml
@@ -53,7 +53,7 @@
         app:layout_constraintStart_toStartOf="@+id/textView_temperature"
         app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
         app:layout_constraintVertical_bias="0.0"
-        tools:text="Feels like 20.4°C" />
+        tools:text="It feels like 20.4°C" />
 
     <TextView
         android:id="@+id/textView_wind"
