--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -1,22 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/appWidgetBackgroundColor"
-    android:padding="@dimen/widget_margin"
-    android:theme="@style/ThemeOverlay.Forecast.AppWidgetContainer">
+    android:layout_height="wrap_content"
+    android:background="#00000000"
+    android:clickable="false">
 
-    <TextView
-        android:id="@+id/widget_temp"
-        android:layout_width="match_parent"
-        android:layout_height="644dp"
-        android:layout_alignParentStart="true"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="595dp"
-        android:rotationX="0"
-        android:text="test" />
-</LinearLayout>
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/description"
+        android:visibility="visible"
+        app:srcCompat="@drawable/search_bar" />
+</RelativeLayout>
