--- a/app/src/main/res/layout/current_weather_fragment.xml
+++ b/app/src/main/res/layout/current_weather_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.weather.current.CurrentWeatherFragment">
+    tools:context=".foreground.weather.current.CurrentWeatherFragment">
 
     <TextView
         android:id="@+id/conditionText"
